LUCENE-2169, LUCENE-2179: Improvements to CharArraySet.copy() and clear() is now working
git-svn-id: https://svn.apache.org/repos/asf/lucene/java/trunk@893655 13f79535-47bb-0310-9956-ffa450edef68